All Changes Fixed

--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="s.css">
     <title>Pharmacy Website</title>
 </head>
+
 <body>
     <header style="position: sticky;top:0; z-index: 10; width: 100%;">
-    <!--stripe added-->
+        <!--stripe added-->
         <div style="background-color: #296e9f; height:32px">
-        <div style="display: flex; padding: 5px; justify-content: space-around; width: 30%; margin-left: auto; margin-right: auto; color: white; font-size: medium;">
-            <div>Contact us  </div>
-            <div> | </div>
-            <div>Address  </div>
-            <div> | </div>
-            <div>Emergency Number</div>
+            <div
+                style="display: flex; padding: 5px; justify-content: space-around; width: 30%; margin-left: auto; margin-right: auto; color: white; font-size: medium;">
+                <div>Contact us </div>
+                <div> | </div>
+                <div>Address </div>
+                <div> | </div>
+                <div>Emergency Number</div>
+            </div>
         </div>
-        </div>
-   <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo">
-            <img src="remedy.png" alt="Pharmacy Logo">
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <i class="fa fa-search"></i>
-        </div>
-        <div class="cart-button">
-            <button>Cart</button>
-        </div>
-        <div class="login-button">
-            <button><a href="./login form/index.html">Login</a></button>
-        </div>
-    </nav>
-</header>
+        <!-- Navbar -->
+        <nav class="navbar">
+            <div class="logo">
+                <img src="remedy.png" alt="Pharmacy Logo">
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <i class="fa fa-search"></i>
+            </div>
+            <div class="cart-button">
+                <button>Cart</button>
+            </div>
+            <div class="login-button">
+                <button><a href="./login form/index.html">Login</a></button>
+            </div>
+        </nav>
+    </header>
     <!-- Carousel Section -->
     <section class="carousel-section">
         <div class="carousel-container">
@@ -121,24 +124,42 @@
                 <div class="rating">★★★★☆</div>
             </div>
             <!-- Add more product cards as needed -->
-        </div>
+        </div><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
-                <!-- Add more footer links as needed -->
-            </ul>
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
         </div>
-        <div class="social-links">
-            <a href="#"><img src="facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram.png" alt="Instagram"></a>
-        </div>
-    </footer>
+        <ul class="social-icon">
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a></li>
+        </ul>
+        <ul class="menu">
+          <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Products</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">About Us</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Facebook</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Twitter</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Instagram</a></li>
+    
+        </ul>
+        <p>&copy;2023 Remedy Website | All Rights Reserved</p>
+      </footer>
 </body>
+
 </html>
