--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 <body>
     <header style="position: sticky;top:0; z-index: 10; width: 100%;">
         <!--stripe added-->
-        <div style="background-color: #296e9f; height:32px">
-            <div
-                style="display: flex; padding: 5px; justify-content: space-around; width: 30%; margin-left: auto; margin-right: auto; color: white; font-size: medium;">
-                <div>Contact us </div>
-                <div> | </div>
-                <div>Address </div>
-                <div> | </div>
-                <div>Emergency Number</div>
-            </div>
-        </div>
+        <div class="stripe">
+            <ul>
+              <li>Contact us</li>
+              <li>Address</li>
+              <li>Emergency Number</li>
+            </ul>
+          </div>
         <!-- Navbar -->
         <nav class="navbar">
             <div class="logo">
